--- a/index.html
+++ b/index.html
@@ -47,6 +47,7 @@
 
       <video
         autoplay
+        muted
         loop
         src="Images/WhatsApp Video 2024-08-18 at 10.12.22_3ab5e9ea.mp4"
         style="border-radius: 10px; height: 380px"
